# dyahai-2.0

./: .env.example  .gitignore  Cargo.toml  LICENSE.txt  README.md  dfx.json  init-args.did  package-lock.json  package.json  website_backend.did
src/nftwallet/: nftwallet.did
src/nftwallet/src/: lib.rs  wrap.rs
src/website_backend/: Cargo.toml  website_backend.did
src/website_backend/src/: http.rs  lib.rs  storages.rs  transaction.rs  users_store.rs
src/website_frontend/: index.html  package.json  tailwind.config.js  variants.js  vite.config.js
src/website_frontend/public/: .ic-assets.json5
src/website_frontend/src/: App.jsx  index.css
src/website_frontend/src/components/layout/: Loader.jsx  Navbar.jsx
src/website_frontend/src/components/layout/sectionHomePage/: About.jsx  Advantages.jsx  Feature.jsx  Footer.jsx  Gallery.jsx  Hero.jsx
src/website_frontend/src/components/layout/sectionProfilePage/: AccountDetails.jsx  GenerateHistory.jsx  PaymentGateway.jsx
src/website_frontend/src/components/ui/: Button.jsx
src/website_frontend/src/components/ui/FreeToUse/: FTUImages.jsx
src/website_frontend/src/components/ui/HDResult/: slider.jsx
src/website_frontend/src/components/ui/HumbergerButton/: HumbergerButton.jsx
src/website_frontend/src/hooks/: authHook.js  authStoracha.js  useDropdown.js  useTogglemenu.js
src/website_frontend/src/pages/: 404Page.jsx  CreditPaymentPage.jsx  GeneratePage.jsx  HomePage.jsx  ProfilePage.jsx  TermsServicePage.jsx
src/website_frontend/src/provider/: authProvider.jsx  requireAuth.jsx
