[package]
name = "website_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.11"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
serde = "1.0.152"
serde_json = "1.0.93"
serde_bytes = "0.11.9"
base64 = "0.22.1"
ic-ledger-types = "0.15.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
